src/tests/invalidframingconfig/data/xfodenynoframeancestorsnone.tmpl
<!DOCTYPE html>
<title>Invalid framing configuration</title>
X-Frame-Options DENY is set but there is no CSP frame-ancestors 'none'
entry.